<resources>
    <string name="app_name">Shoe Store</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="start_icon_desc">Email icon</string>
    <string name="login_button">Login</string>
    <string name="create_button">Create</string>
    <string name="save_button">Save</string>
    <string name="continue_to_instruction_screen">Continue</string>
    <string name="existing_account_button">Forgot password?</string>
    <string name="welcome">Welcome to Shoe Store App</string>
    <string name="instruction_screen">The shoe store app is an app that shows you a list of shoes with the ability to add shoes to the list</string>
    <string name="action_logout">Logout</string>
    <string name="score_format">%d</string>
</resources>
