<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Email label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:startIconContentDescription="@string/start_icon_desc"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            tools:layout_editor_absoluteY="235dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- Password label -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/email_label"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:startIconDrawable="@drawable/ic_baseline_visibility_24"
            tools:layout_editor_absoluteY="321dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/create"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/create_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@id/login"
            app:layout_constraintRight_toLeftOf="@id/login"
            app:layout_constraintTop_toBottomOf="@+id/password_text_label"
            android:layout_marginTop="40dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/login_button"
            android:background="@drawable/round_button"
            app:layout_constraintTop_toBottomOf="@+id/password_text_label"
            app:layout_constraintLeft_toRightOf="@id/create"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="40dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/existing_account_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/existing_account_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textSize="10sp"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/password_text_label"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="100dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

